# LogWatch

./: .env  LICENSE  Makefile  README.md  docker-compose.yml  env.example  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  init.py  main.py
backend/app/ai/: __init__.py  analyzer.py  config.py  providers.py
backend/app/api/: chat_routes.py  models.py  routes.py
backend/app/auth/: jwt_bearer.py  jwt_handler.py
backend/app/cli/: ingest.py  watch.py
backend/app/ingestion/: checkpoint.py  watcher.py  worker.py
backend/app/ingestion/parsers/: __init__.py  base.py  csv_parser.py  heuristic_parser.py  json_parser.py  regex_parser.py
backend/app/search/: client.py  init.py  mappings.py
backend/tests/: conftest.py  test_ingestion.py  test_parsers.py
docs/: ARCHITECTURE.md  PRESENTATION.md  README.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Charts.jsx  ChatSidebar.jsx  ChatTimeline.jsx  Dashboard.jsx  LogSearch.jsx  LogViewer.jsx  RawLogModal.jsx  TimeRangePicker.jsx
frontend/src/services/: api.js
frontend/src/utils/: formatters.js
logs_in/: sample_logs.json
logs_in/logs_in/: scenario1_healthy_system.json  scenario2_database_outage.json  scenario3_memory_leak.json  scenario4_ddos_attack.json  scenario5_payment_failures.json  scenario6_mixed_errors.json
scripts/: generate_logs.py  generate_realistic_logs.py  setup_opensearch.py
